Fixed dark mode bugs and added additional themes

--- a/src/containers/InputDrawer/InputDrawer.module.scss
+++ b/src/containers/InputDrawer/InputDrawer.module.scss
@@ -4,7 +4,6 @@
 
 #toolbar {
   padding-right: 20px !important;
-  border-bottom: 1px solid #f0f0f0;
 
   #closeButton {
     position: absolute;
